# newGitTest

./: CMakeLists.txt  configuration.h.in  index.html
src/: main.cpp
